--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Zane Jobe, PhD
-description: Sedimentologist | Research Professor | Earth-Resource Data Science
+description: Sedimentologist | Research Professor | Earth-Resource Data Scientist
