--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: Zane Jobe, PhD
 description: Sedimentologist | Research Professor | Earth-Resource Data Scientist
+
+![Zane Jobe](https://core.mines.edu/wp-content/uploads/sites/206/2019/04/zane-jobe.jpg){:class="img-responsive"}
